# Software-Engineering-Resit-Group

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2cd90676277e_create_task_category_assosiation_table.py  3550f52a1250_create_table_for_holding_durations_of_.py  3f41d878f2be_create_task_and_category_tables.py  7091f15daaf5_added_unique_constaints_to_names_of_.py  d9a575f6919e_create_task_category_table.py  de5e28c1077b_migrated_to_sqlite_initial_migration.py
cli/: cli.py
config/: mysql.py  mysql_template.py  mysql_template.py.txt
database/: connector.py  query_wrapper.py  session_wrapper.py  ttt.db
scripts/: cli.py  main.py
src/: app.py
src/backend/api/: base_api.py  category_api.py  reports_api.py  task_api.py
src/backend/exception/: __init__.py
src/backend/model/: __init__.py  category.py  task.py  task_category.py  task_time.py
src/backend/models/: category.py  task.py  task_category.py
src/backend/service/: task_service.py
src/frontend/: cli.py
src/frontend/cli_functions/: add.py  delete.py  function.py  help.py  new.py  report.py  show.py  update.py
tests/: test_sample.py  testdata.py
tests/backend/api/: conftest.py  data.py  test_category_api.py  test_reports_api.py  test_task_api.py
tests/backend/model/: test_models.py
tests/backend/models/: test_models.py
tests/commandline/: test_commandline.py
tests/database/: test_database.py
tests/frontend/: manual_testing.md  manual_testing.txt
