[tool.poetry]
name = "software-engineering-resit-group"
version = "0.1.0"
description = ""
authors = ["EfimNovikov <sawtery@gmail.com>"]
readme = "README.md"
packages = [{include = "software_engineering_resit_group"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
