[tool.poetry]
name = "software-engineering-resit-group"
version = "0.1.0"
description = ""
authors = ["EfimNovikov <sawtery@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.19"
mysqlclient = "^2.2.0"
pymysql = "^1.1.0"
cryptography = "^41.0.3"
alembic = "^1.11.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
prod    = "scripts.main:prod"
dev     = "scripts.main:dev"
migrate = "scripts.main:migrate"